    (closes :issue:`291`)

- Enabled Travis-CI builds for Python 3.3
- :meth:`Tables.read_coordinates` now also works with boolean indices input.
  Closes :issue:`287` and :issue:`298`.
- Automatically disable extended float support if a buggy version of HDF5
  is detected (see also `Issues with H5T_NATIVE_LDOUBLE`_).
  See also :issue:`275`, :issue:`290` and :issue:`300`.

Bugs fixed
----------

- Fixed detection of platforms supporting blosc
- Fixed a crash that occurred when one attempts to write a numpy_ array to
  an :class:`Atom` (closes :issue:`209` and :issue:`296`)
- Prevent creation of a table with no columns (closes :issue:`18` and
  :issue:`299`)
- Fixed a memory leak that occurs when iterating over
  :class:`CArray`/:class:`EArray` objects (closes :issue:`308`,
  see also :issue:`309`).
  Many thanks to Alistair Muldal.
- Make NaN types sort to the end. Closes :issue:`282` and :issue:`313`

.. _pip: http://www.pip-installer.org
.. _Anaconda: https://store.continuum.io/cshop/anaconda
.. _Canopy: https://www.enthought.com/products/canopy
.. _`Christoph Gohlke suites`: http://www.lfd.uci.edu/~gohlke/pythonlibs
.. _`Issues with H5T_NATIVE_LDOUBLE`: http://hdf-forum.184993.n3.nabble.com/Issues-with-H5T-NATIVE-LDOUBLE-tt4026450.html


Changes from 2.4 to 3.0
=======================

New features
------------

- Since this release PyTables provides full support to Python_ 3
  (closes :issue:`188`).

- The entire code base is now more compliant with coding style guidelines
  describe in the PEP8_ (closes :issue:`103` and :issue:`224`).
  See `API changes`_ for more details.

- Basic support for HDF5 drivers.  Now it is possible to open/create an
  HDF5 file using one of the SEC2, DIRECT, LOG, WINDOWS, STDIO or CORE
  drivers.  Users can also set the main driver parameters (closes
  :issue:`166`).
  Thanks to Michal Slonina.

- Basic support for in-memory image files.  An HDF5 file can be set from or